--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Api\SAppTheme.cs" />
     <Compile Include="Api\SCategory.cs" />
     <Compile Include="Api\SComment.cs" />
+    <Compile Include="Api\SNewCreatedQuestions.cs" />
     <Compile Include="Api\SQuestionBoost.cs" />
     <Compile Include="Api\SUserState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
