--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Api\SNewCreatedQuestions.cs" />
     <Compile Include="Api\SQuestionBoost.cs" />
     <Compile Include="Api\SUserState.cs" />
+    <Compile Include="Api\SUserStatistics.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Api\SQuestion.cs" />
     <Compile Include="Api\SUser.cs" />
