--- a/Source/Falcon/src/Falcon.Web.Site/Falcon.Web.Site.csproj
+++ b/Source/Falcon/src/Falcon.Web.Site/Falcon.Web.Site.csproj
@@ -120,6 +120,7 @@
     <Content Include="Global.asax" />
     <None Include="Properties\PublishProfiles\AspSomeeFtp.pubxml" />
     <None Include="Properties\PublishProfiles\AspWebsite.pubxml" />
+    <None Include="Properties\PublishProfiles\FlappSite.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
