--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -142,6 +142,10 @@
     <Compile Include="AutoMappingConfiguration\UserInfoMap\UserInfoToSUserInfoAutoTypeConfiguration.cs" />
     <Compile Include="Controllers\V1\LeaderBoardController.cs" />
     <Compile Include="Controllers\V1\LevelsController.cs" />
+    <Compile Include="InquiryProcessing\AllCommentsInquiryProcessor.cs" />
+    <Compile Include="InquiryProcessing\IAllCommentsInquiryProcessor.cs" />
+    <Compile Include="InquiryProcessing\IPagedDataRequestFactory.cs" />
+    <Compile Include="InquiryProcessing\PagedDataRequestFactory.cs" />
     <Compile Include="Utilities\Extensions\FalconApiController.cs" />
     <Compile Include="Utilities\ILevelManager.cs" />
     <Compile Include="Utilities\LevelManager.cs" />
