--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -149,6 +149,7 @@
     <Compile Include="InquiryProcessing\Public\ICreatedQuestionsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\IPagedDataRequestFactory.cs" />
     <Compile Include="InquiryProcessing\Private\PagedDataRequestFactory.cs" />
+    <Compile Include="Security\Private\BasicAuthenticationMessageHandler.cs" />
     <Compile Include="Security\Private\BasicPrincipalSecurityService.cs" />
     <Compile Include="Security\Public\IBasicPrincipalSecurityService.cs" />
     <Compile Include="Utilities\Base\FalconApiController.cs" />
