--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -149,6 +149,8 @@
     <Compile Include="InquiryProcessing\Public\ICreatedQuestionsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\IPagedDataRequestFactory.cs" />
     <Compile Include="InquiryProcessing\Private\PagedDataRequestFactory.cs" />
+    <Compile Include="MaintenanceProcessing\Private\GlobalApplicationState.cs" />
+    <Compile Include="MaintenanceProcessing\Public\IGlobalApplicationState.cs" />
     <Compile Include="Security\Private\BasicAuthenticationMessageHandler.cs" />
     <Compile Include="Security\Private\BasicPrincipalSecurityService.cs" />
     <Compile Include="Security\Public\IBasicPrincipalSecurityService.cs" />
@@ -192,8 +194,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="MaintenanceProcessing\Private\" />
-    <Folder Include="MaintenanceProcessing\Public\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Falcon.Common\Falcon.Common.csproj">
