changing database structure , adding GiftCode & Time base Gift

--- a/Source/Falcon/src/Falcon.Database/Falcon.Database.csproj
+++ b/Source/Falcon/src/Falcon.Database/Falcon.Database.csproj
@@ -53,8 +53,10 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServer\Mapping\VersionedClassMap.cs" />
+    <Compile Include="SqlServer\QueryProcessors\CodeGiftsQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\CommentsQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\CreatedQuestionsQueryProcessor.cs" />
+    <Compile Include="SqlServer\QueryProcessors\ICodeGiftsQueryProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Falcon.Common\Falcon.Common.csproj">
