--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -54,10 +54,12 @@
     <Compile Include="Api\SAppTheme.cs" />
     <Compile Include="Api\SCategory.cs" />
     <Compile Include="Api\SComment.cs" />
+    <Compile Include="Api\SGift.cs" />
     <Compile Include="Api\SGoogleAuthentication.cs" />
     <Compile Include="Api\SLeaderBoard.cs" />
     <Compile Include="Api\SLevel.cs" />
     <Compile Include="Api\SNewCreatedQuestions.cs" />
+    <Compile Include="Api\SNotify.cs" />
     <Compile Include="Api\SQuestionBoost.cs" />
     <Compile Include="Api\SReportType.cs" />
     <Compile Include="Api\SStore.cs" />
