adding Market info and refactoring store

--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Api\SComment.cs" />
     <Compile Include="Api\SGift.cs" />
     <Compile Include="Api\SGoogleAuthentication.cs" />
+    <Compile Include="Api\SHardCurrency.cs" />
     <Compile Include="Api\SLeaderBoard.cs" />
     <Compile Include="Api\SLevel.cs" />
     <Compile Include="Api\SNewCreatedQuestions.cs" />
