--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -162,11 +162,21 @@
     <Compile Include="InquiryProcessing\Public\IUsersInquiryProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\CodeGiftsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\GlobalApplicationState.cs" />
+    <Compile Include="MaintenanceProcessing\Private\StoresMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\ICodeGiftsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IGlobalApplicationState.cs" />
+    <Compile Include="MaintenanceProcessing\Public\IStoresMaintenaceProcessor.cs" />
     <Compile Include="Security\Private\BasicAuthenticationMessageHandler.cs" />
     <Compile Include="Security\Private\BasicPrincipalSecurityService.cs" />
+    <Compile Include="Security\Private\MarketVerificationProcessor.cs" />
     <Compile Include="Security\Public\IBasicPrincipalSecurityService.cs" />
+    <Compile Include="Security\Public\IMarketVerificationProcessor.cs" />
+    <Compile Include="Security\PurchaseVerificationRequest.cs" />
+    <Compile Include="Security\PurchaseVerificationResponse.cs" />
+    <Compile Include="Security\RefreshTokenRequest.cs" />
+    <Compile Include="Security\TokenError.cs" />
+    <Compile Include="Security\TokenRequest.cs" />
+    <Compile Include="Security\TokenResponse.cs" />
     <Compile Include="Utilities\Base\FalconApiController.cs" />
     <Compile Include="Controllers\V1\AchievedPosessionsController.cs" />
     <Compile Include="Controllers\V1\ApplicationStatesController.cs" />
