--- a/Source/Falcon/src/Falcon.Common/Falcon.Common.csproj
+++ b/Source/Falcon/src/Falcon.Common/Falcon.Common.csproj
@@ -41,6 +41,10 @@
       <HintPath>..\..\lib\log4net.2.0.7\lib\net45-full\log4net.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\lib\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -64,6 +68,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\IUserSession.cs" />
     <Compile Include="Security\IWebUserSession.cs" />
+    <Compile Include="Serialization\IJsonManager.cs" />
+    <Compile Include="Serialization\JsonManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
