--- a/Source/Falcon/src/Falcon.Common/Falcon.Common.csproj
+++ b/Source/Falcon/src/Falcon.Common/Falcon.Common.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Constants.cs" />
     <Compile Include="DateTimeAdapter.cs" />
     <Compile Include="Extentions\ContextExtensions.cs" />
+    <Compile Include="Extentions\DateTimeExtentions.cs" />
     <Compile Include="Extentions\IntExtensions.cs" />
     <Compile Include="Extentions\UriExtensions.cs" />
     <Compile Include="IDateTime.cs" />
